force-app/main/default/objects/Case/fields/Add_AC_DC_WFD_Flex_to_existing_design__c.field-meta.xml
<CustomField>
    <fullName>Add_AC_DC_WFD_Flex_to_existing_design__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add AC/DC/WFD Flex to existing design?</label>
    <type>Checkbox</type>
</CustomField>