force-app/main/default/objects/Case/fields/Air_temp_near_lights__c.field-meta.xml
<CustomField>
    <fullName>Air_temp_near_lights__c</fullName>
    <label>Air temp near lights (deg C)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>