force-app/main/default/objects/Case/fields/All_Items_on_Shipping_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Items_on_Shipping_Section_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Items on Shipping Section Completed</label>
    <type>Checkbox</type>
</CustomField>