force-app/main/default/objects/Case/fields/Application_Details__c.field-meta.xml
<CustomField>
    <fullName>Application_Details__c</fullName>
    <label>Application Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Application__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Application_Detail</valueSetName>
    </valueSet>
</CustomField>