force-app/main/default/objects/Case/fields/Area_zone_of_failure_s__c.field-meta.xml
<CustomField>
    <fullName>Area_zone_of_failure_s__c</fullName>
    <label>Area/zone of failure(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>