force-app/main/default/objects/Case/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <label>Assigned Date</label>
    <type>DateTime</type>
</CustomField>