force-app/main/default/objects/Case/fields/Bug_Creator__c.field-meta.xml
<CustomField>
    <fullName>Bug_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bug Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>