force-app/main/default/objects/Case/fields/Cannabis__c.field-meta.xml
<CustomField>
    <fullName>Cannabis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cannabis</label>
    <type>Checkbox</type>
</CustomField>