force-app/main/default/objects/Case/fields/Canopy_Size__c.field-meta.xml
<CustomField>
    <fullName>Canopy_Size__c</fullName>
    <label>Canopy Size</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>