force-app/main/default/objects/Case/fields/Case_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Case_Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Reopen ?</label>
    <type>Checkbox</type>
</CustomField>