force-app/main/default/objects/Case/fields/Case_Resolved_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolved_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Resolved Notification Sent</label>
    <type>Checkbox</type>
</CustomField>