force-app/main/default/objects/Case/fields/Commissioning_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Completed_Date__c</fullName>
    <label>Commissioning Completed Date</label>
    <type>Date</type>
</CustomField>