force-app/main/default/objects/Case/fields/Commissioning_Service_Needed__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Service_Needed__c</fullName>
    <label>Commissioning Service Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>