force-app/main/default/objects/Case/fields/Commissioning_SKU_Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_SKU_Work_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissioning SKU Work Completed</label>
    <type>Checkbox</type>
</CustomField>