force-app/main/default/objects/Case/fields/Comparative_Treatments__c.field-meta.xml
<CustomField>
    <fullName>Comparative_Treatments__c</fullName>
    <label>Comparative Treatments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Define the spectrums</fullName>
            </value>
            <value>
                <fullName>Wattage match</fullName>
            </value>
            <value>
                <fullName>PPFD match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>