force-app/main/default/objects/Case/fields/Complete_Day__c.field-meta.xml
<CustomField>
    <fullName>Complete_Day__c</fullName>
    <label>Date Completed</label>
    <type>DateTime</type>
</CustomField>