force-app/main/default/objects/Case/fields/Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Type__c</fullName>
    <inlineHelpText>Select &quot;New Construction&quot; unless there is existing horticultural lightning being replaced.</inlineHelpText>
    <label>Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Construction_Type</valueSetName>
    </valueSet>
</CustomField>