force-app/main/default/objects/Case/fields/Contract_with_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Contract_with_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract with Pricing</label>
    <type>Checkbox</type>
</CustomField>