force-app/main/default/objects/Case/fields/Contract_with_Pricing_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_with_Pricing_Due_Date__c</fullName>
    <label>Contract with Pricing Due Date</label>
    <type>Date</type>
</CustomField>