force-app/main/default/objects/Case/fields/Contract_with_Pricing_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_with_Pricing_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract with Pricing Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesBUtP</relationshipName>
    <type>Lookup</type>
</CustomField>