force-app/main/default/objects/Case/fields/CountDays__c.field-meta.xml
<CustomField>
    <fullName>CountDays__c</fullName>
    <label>CountDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>