force-app/main/default/objects/Case/fields/Current_lighting_levels__c.field-meta.xml
<CustomField>
    <fullName>Current_lighting_levels__c</fullName>
    <inlineHelpText>Must be measured by a calibrated light meter after sunset or before sunrise. If measuring HPS PPFD run the lights for at least 4 hrs before measuring the PPFD with a light meter</inlineHelpText>
    <label>Current lighting levels</label>
    <type>TextArea</type>
</CustomField>