force-app/main/default/objects/Case/fields/Current_lighting_source__c.field-meta.xml
<CustomField>
    <fullName>Current_lighting_source__c</fullName>
    <label>Current lighting source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HPS</fullName>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>