force-app/main/default/objects/Case/fields/Customer_Requested_Ship_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Ship_date__c</fullName>
    <label>Customer Requested Ship Date</label>
    <type>Date</type>
</CustomField>