force-app/main/default/objects/Case/fields/Customers_Electric_Utility__c.field-meta.xml
<CustomField>
    <fullName>Customers_Electric_Utility__c</fullName>
    <inlineHelpText>Confirm with customer before submitting.</inlineHelpText>
    <label>Customer’s Electric Utility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>