force-app/main/default/objects/Case/fields/Date_RMA_Received_at_Fluence__c.field-meta.xml
<CustomField>
    <fullName>Date_RMA_Received_at_Fluence__c</fullName>
    <label>Date RMA Received at Fluence</label>
    <type>Date</type>
</CustomField>