force-app/main/default/objects/Case/fields/Date_visited__c.field-meta.xml
<CustomField>
    <fullName>Date_visited__c</fullName>
    <label>Scheduled Site Visit Date</label>
    <type>Date</type>
</CustomField>