force-app/main/default/objects/Case/fields/Date_when_first_time_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_when_first_time_submitted__c</fullName>
    <label>Date when first time submitted</label>
    <type>Date</type>
</CustomField>