force-app/main/default/objects/Case/fields/Days_Closed_Customer__c.field-meta.xml
<CustomField>
    <fullName>Days_Closed_Customer__c</fullName>
    <label>Days Closed to Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>