force-app/main/default/objects/Case/fields/Days_to_Assign__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Assign__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days to Assign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>