force-app/main/default/objects/Case/fields/Days_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Close__c</fullName>
    <label>Days To Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>