force-app/main/default/objects/Case/fields/Description_of_Changes_Requested__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Changes_Requested__c</fullName>
    <label>Description of Changes Requested</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>