force-app/main/default/objects/Case/fields/Description_Rich__c.field-meta.xml
<CustomField>
    <fullName>Description_Rich__c</fullName>
    <label>Description Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>