force-app/main/default/objects/Case/fields/DesignRevision__c.field-meta.xml
<CustomField>
    <fullName>DesignRevision__c</fullName>
    <description>Used to specify the Design Revision for LDRF cases. This field needs to be populated before complete the LDRF case.</description>
    <label>Design revision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>