force-app/main/default/objects/Case/fields/Email_Notification_on_Case_Waiting_on_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_on_Case_Waiting_on_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Email Waiting on Internal</label>
    <type>Checkbox</type>
</CustomField>