force-app/main/default/objects/Case/fields/EmailNotificationMessage__c.field-meta.xml
<CustomField>
    <fullName>EmailNotificationMessage__c</fullName>
    <defaultValue>&quot;As our main offices are closed Saturday and Sunday, please expect a response within the next 24 business hours.&quot;</defaultValue>
    <description>Used to stores a message that can be used in email templates related to case.</description>
    <label>Email Notification Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>