force-app/main/default/objects/Case/fields/End_User_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>End_User_Type_Description__c</fullName>
    <label>End User Type Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>