force-app/main/default/objects/Case/fields/Entry_Error_Impact__c.field-meta.xml
<CustomField>
    <fullName>Entry_Error_Impact__c</fullName>
    <label>Entry Error Impact</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>Entry_Error_Issue</valueSetName>
    </valueSet>
</CustomField>