force-app/main/default/objects/Case/fields/Entry_Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Error_Type__c</fullName>
    <label>Entry Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>Entry_Error_Type</valueSetName>
    </valueSet>
</CustomField>