force-app/main/default/objects/Case/fields/Environment_Fertilizer__c.field-meta.xml
<CustomField>
    <fullName>Environment_Fertilizer__c</fullName>
    <label>Environment &amp; Fertilizer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>