force-app/main/default/objects/Case/fields/ERP_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order__c</fullName>
    <label>ERP Order #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>