force-app/main/default/objects/Case/fields/Estimated_application_approval_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_application_approval_date__c</fullName>
    <label>Estimated application approval date</label>
    <type>Date</type>
</CustomField>