force-app/main/default/objects/Case/fields/Estimated_inspection_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_inspection_date__c</fullName>
    <label>Estimated inspection date</label>
    <type>Date</type>
</CustomField>