force-app/main/default/objects/Case/fields/Estimated_Installation_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Installation_completion_date__c</fullName>
    <label>Estimated Installation completion date</label>
    <type>Date</type>
</CustomField>