force-app/main/default/objects/Case/fields/Estimated_Payment_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Payment_date__c</fullName>
    <label>Estimated Payment date</label>
    <type>Date</type>
</CustomField>