force-app/main/default/objects/Case/fields/Estimated_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Rebate__c</fullName>
    <label>Estimated Rebate Payment date</label>
    <type>Date</type>
</CustomField>