force-app/main/default/objects/Case/fields/Estimated_Rebate_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Rebate_Value__c</fullName>
    <label>Estimated Rebate Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>