force-app/main/default/objects/Case/fields/Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Customer</label>
    <type>Checkbox</type>
</CustomField>