force-app/main/default/objects/Case/fields/Facility_City__c.field-meta.xml
<CustomField>
    <fullName>Facility_City__c</fullName>
    <label>Facility City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>