force-app/main/default/objects/Case/fields/Facility_Country__c.field-meta.xml
<CustomField>
    <fullName>Facility_Country__c</fullName>
    <label>Facility Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>