force-app/main/default/objects/Case/fields/Facility_State__c.field-meta.xml
<CustomField>
    <fullName>Facility_State__c</fullName>
    <label>Facility State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Picklists</valueSetName>
    </valueSet>
</CustomField>