force-app/main/default/objects/Case/fields/FAE_Troubleshooting_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>FAE_Troubleshooting_and_Comments__c</fullName>
    <label>FAE Troubleshooting and Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>