force-app/main/default/objects/Case/fields/Field_Troubleshooting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Field_Troubleshooting_Notes__c</fullName>
    <label>Field Troubleshooting Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>