force-app/main/default/objects/Case/fields/Final_application_complete__c.field-meta.xml
<CustomField>
    <fullName>Final_application_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final application complete</label>
    <type>Checkbox</type>
</CustomField>