force-app/main/default/objects/Case/fields/Final_application_complete_date__c.field-meta.xml
<CustomField>
    <fullName>Final_application_complete_date__c</fullName>
    <label>Final application complete date</label>
    <type>Date</type>
</CustomField>