force-app/main/default/objects/Case/fields/Final_Rebate_claim_amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Rebate_claim_amount__c</fullName>
    <label>Final Rebate claim amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>