force-app/main/default/objects/Case/fields/Finance_Approval_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Completed_Date__c</fullName>
    <label>Finance Approval Completed Date</label>
    <type>Date</type>
</CustomField>