force-app/main/default/objects/Case/fields/Finance_Approval_Owner__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Approval Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesBUuD</relationshipName>
    <type>Lookup</type>
</CustomField>