force-app/main/default/objects/Case/fields/First_LDRF_Designer__c.field-meta.xml
<CustomField>
    <fullName>First_LDRF_Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First LDRF Designer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesLDRFDesigner</relationshipName>
    <type>Lookup</type>
</CustomField>