force-app/main/default/objects/Case/fields/Fixtures_used_in_design__c.field-meta.xml
<CustomField>
    <fullName>Fixtures_used_in_design__c</fullName>
    <label>Fixtures used in design</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>RAY</fullName>
            </value>
            <value>
                <fullName>RAZRm</fullName>
            </value>
            <value>
                <fullName>RAZRms</fullName>
            </value>
            <value>
                <fullName>RP1</fullName>
            </value>
            <value>
                <fullName>RP2</fullName>
            </value>
            <value>
                <fullName>SR2</fullName>
            </value>
            <value>
                <fullName>VN</fullName>
            </value>
            <value>
                <fullName>VR3</fullName>
            </value>
            <value>
                <fullName>VR4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>