force-app/main/default/objects/Case/fields/Flex_system_used_in_design__c.field-meta.xml
<CustomField>
    <fullName>Flex_system_used_in_design__c</fullName>
    <label>Flex system used in design</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Flex_Design__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Flex</fullName>
            </value>
            <value>
                <fullName>DC Flex</fullName>
            </value>
            <value>
                <fullName>Wireless Flex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>