force-app/main/default/objects/Case/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Probability (%)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>