force-app/main/default/objects/Case/fields/General_Case_Link__c.field-meta.xml
<CustomField>
    <fullName>General_Case_Link__c</fullName>
    <label>General Case Link</label>
    <type>Url</type>
</CustomField>