force-app/main/default/objects/Case/fields/Grower_Review__c.field-meta.xml
<CustomField>
    <fullName>Grower_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grower Review</label>
    <type>Checkbox</type>
</CustomField>