force-app/main/default/objects/Case/fields/Grower_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Grower_Review_Completed_Date__c</fullName>
    <label>Grower Review Completed Date</label>
    <type>Date</type>
</CustomField>