force-app/main/default/objects/Case/fields/Grower_Review_Owner__c.field-meta.xml
<CustomField>
    <fullName>Grower_Review_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grower Review Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesBUvQ</relationshipName>
    <type>Lookup</type>
</CustomField>