force-app/main/default/objects/Case/fields/Growing_method__c.field-meta.xml
<CustomField>
    <fullName>Growing_method__c</fullName>
    <label>Growing method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rack</fullName>
            </value>
            <value>
                <fullName>Bench</fullName>
            </value>
            <value>
                <fullName>High-wire</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>