force-app/main/default/objects/Case/fields/HS_Contact__c.field-meta.xml
<CustomField>
    <fullName>HS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesDTvC</relationshipName>
    <type>Lookup</type>
</CustomField>