force-app/main/default/objects/Case/fields/Humidity_near_lights__c.field-meta.xml
<CustomField>
    <fullName>Humidity_near_lights__c</fullName>
    <label>Humidity near lights (% RH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>