force-app/main/default/objects/Case/fields/I_need_help_with__c.field-meta.xml
<CustomField>
    <fullName>I_need_help_with__c</fullName>
    <label>I need help with</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ordering/Payments</fullName>
            </value>
            <value>
                <fullName>Order/Shipping status</fullName>
            </value>
            <value>
                <fullName>Product consultation</fullName>
            </value>
            <value>
                <fullName>Installation support</fullName>
            </value>
            <value>
                <fullName>Cultivation support</fullName>
            </value>
            <value>
                <fullName>Warranty service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>