force-app/main/default/objects/Case/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <label>Incident #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>