force-app/main/default/objects/Case/fields/Infor_RMA__c.field-meta.xml
<CustomField>
    <fullName>Infor_RMA__c</fullName>
    <label>Infor RMA #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>