force-app/main/default/objects/Case/fields/InProgress_Day__c.field-meta.xml
<CustomField>
    <fullName>InProgress_Day__c</fullName>
    <label>InProgress Day</label>
    <type>DateTime</type>
</CustomField>