force-app/main/default/objects/Case/fields/InProgress_Day_RARF__c.field-meta.xml
<CustomField>
    <fullName>InProgress_Day_RARF__c</fullName>
    <label>InProgress Day RARF</label>
    <type>DateTime</type>
</CustomField>