force-app/main/default/objects/Case/fields/Inspection_completed__c.field-meta.xml
<CustomField>
    <fullName>Inspection_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection completed?</label>
    <type>Checkbox</type>
</CustomField>