force-app/main/default/objects/Case/fields/Inspection_completed_date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_completed_date__c</fullName>
    <label>Inspection completed date</label>
    <type>Date</type>
</CustomField>