force-app/main/default/objects/Case/fields/Is_FAE_Review_complete__c.field-meta.xml
<CustomField>
    <fullName>Is_FAE_Review_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is FAE Review complete?</label>
    <type>Checkbox</type>
</CustomField>