force-app/main/default/objects/Case/fields/Is_FAE_Review_rejected__c.field-meta.xml
<CustomField>
    <fullName>Is_FAE_Review_rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is FAE Review  rejected?</label>
    <type>Checkbox</type>
</CustomField>