force-app/main/default/objects/Case/fields/Is_Immediate_Replacement_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Immediate_Replacement_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Immediate Replacement Needed</label>
    <type>Checkbox</type>
</CustomField>