force-app/main/default/objects/Case/fields/Is_Issue_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Is_Issue_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Issue Resolved</label>
    <type>Checkbox</type>
</CustomField>