force-app/main/default/objects/Case/fields/Is_QN_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_QN_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is QN Needed</label>
    <type>Checkbox</type>
</CustomField>