force-app/main/default/objects/Case/fields/Is_Replacement_Order_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Replacement_Order_Needed__c</fullName>
    <label>Is Replacement Order Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>