force-app/main/default/objects/Case/fields/Is_Shipping_Claim_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Shipping_Claim_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shipping Claim Valid</label>
    <type>Checkbox</type>
</CustomField>