force-app/main/default/objects/Case/fields/Is_Tech_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Tech_Support_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tech Support Needed</label>
    <type>Checkbox</type>
</CustomField>