force-app/main/default/objects/Case/fields/Is_Troubleshooting_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Troubleshooting_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Troubleshooting Complete</label>
    <type>Checkbox</type>
</CustomField>