force-app/main/default/objects/Case/fields/Issue_resolved_at_site__c.field-meta.xml
<CustomField>
    <fullName>Issue_resolved_at_site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issue resolved at site</label>
    <type>Checkbox</type>
</CustomField>