force-app/main/default/objects/Case/fields/Jira_Backlog_Number__c.field-meta.xml
<CustomField>
    <fullName>Jira_Backlog_Number__c</fullName>
    <description>Connects bug to Jira Story</description>
    <inlineHelpText>Should start SF-xxx</inlineHelpText>
    <label>Jira Backlog Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>