force-app/main/default/objects/Case/fields/Last_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>