force-app/main/default/objects/Case/fields/LDRF_Auto_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>LDRF_Auto_Close_Date__c</fullName>
    <label>LDRF Auto Close Date</label>
    <type>Date</type>
</CustomField>