force-app/main/default/objects/Case/fields/LDRF_Case_Completed__c.field-meta.xml
<CustomField>
    <fullName>LDRF_Case_Completed__c</fullName>
    <formula>IF(AND(TEXT(Status)= &apos;Complete&apos;,RecordType.Name = &apos;LDRF&apos;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LDRF Case Completed</label>
    <type>Checkbox</type>
</CustomField>