force-app/main/default/objects/Case/fields/LDRF_Case_Submitted__c.field-meta.xml
<CustomField>
    <fullName>LDRF_Case_Submitted__c</fullName>
    <formula>IF( OR(Owner:Queue.Name = &quot;LDRF Americas Queue&quot;,Owner:Queue.Name = &quot;LDRF EMEA Queue&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LDRF Case Submitted</label>
    <type>Checkbox</type>
</CustomField>